--- a/README
+++ b/README
@@ -1,4 +1,6 @@
-This repository is separated in different folders:
+This branch is for developing of a new annotation module:
+
+It is separated in different folders:
 
 * annotation_1
   - a new annotation module with API, to test some concepts and work out new ones. I hope some of this will be merged
