Emty this repository's branch, to point on new repo

--- a/README
+++ b/README
@@ -1,15 +1,2 @@
-This repository is separated in different development branches:
-that might move to separate repositories.
-
-* annotation
-http://github.com/derhasi/Derhasi-Drupal-Modules-dev/tree/annotation
-
-* imagecache
-http://github.com/derhasi/Derhasi-Drupal-Modules-dev/tree/imagecache
-
--------
-
-Former parts of this repository have their own repository now:
-
-* stats
-http://github.com/derhasi/stats
+This branch moved to repository:
+http://github.com/derhasi/datetoday
