--- a/README
+++ b/README
@@ -1,5 +1,3 @@
 This is an experimentation branch for custom_breadcrumbs patches
-[1] http://drupal.org/node/687512
-[2] http://drupal.org/node/754494
 
-It contains additional identifiers for patch in [1].
+It contains additional identifiers for setting a menu item for the current page view.
